apps/adguard/service96.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-adguard96
  namespace: adguard
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-adguard96-slice
  namespace: adguard
  labels:
    kubernetes.io/service-name: external-adguard96
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8080
endpoints:
  - addresses:
      - "192.168.99.6"
    conditions:
      ready: true
