apps/adguard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-main-route
  namespace: adguard
spec:
  parentRefs:
    - name: gatewayapi
      namespace: traefik
      sectionName: https
  hostnames:
    - adguard.fanto.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: external-adguard
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-56-route
  namespace: adguard
spec:
  parentRefs:
    - name: gatewayapi
      namespace: traefik
      sectionName: https
  hostnames:
    - ad56.adguard.fanto.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: external-adguard56
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-86-route
  namespace: adguard
spec:
  parentRefs:
    - name: gatewayapi
      namespace: traefik
      sectionName: https
  hostnames:
    - ad86.adguard.fanto.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: external-adguard86
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-96-route
  namespace: adguard
spec:
  parentRefs:
    - name: gatewayapi
      namespace: traefik
      sectionName: https
  hostnames:
    - ad96.adguard.fanto.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: external-adguard96
          port: 8080
